lessons/lesson-3-advanced-k8s-layers/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
